# SkillOps

./: .env.example  .gitignore  .pre-commit-config.yaml  .unti  AI_ONCALL_SUMMARY.md  CHANGELOG.md  DEMO.md  DOCUMENTATION_COMPLETE.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  KEYBINDINGS.md  LICENSE  MODIFICATIONS.md  PHASE1-4_ACTION_PLAN.md  PHASE_3_DELIVERY.md  PHASE_3_IMPLEMENTATION.md  PHASE_4_DELIVERY.md  PHASE_5_PLANNING.md  PROJECT_COMPLETE_PHASE_4.md  Product-Discovery-Session.md  README.md  SESSION_SUMMARY.md  SPRINT2_SUMMARY.md  STRUCTURE.md  TESTING.md  URD-User-Requirements-Document.md  pyproject.toml  requirements-lock.txt  requirements.txt  skillops.py  test_oncall_flow.sh
.github/: SPRINT1-SETUP.md  add-issues-to-project.sh  create-sprint1-issues-v2.sh  create-sprint1-issues.sh
.github/workflows/: ci.yml  release.yml
.skillopsvault/: AWS Cloud Fundamentals.md  Ansible Automation.md  CI-CD with GitLab.md  Docker Basics.md  Git Version Control.md  Kubernetes Basics.md  Linux Command Line Essentials.md  Terraform Infrastructure as Code.md
best-practices/: README.md  devops.md  git.md  python.md  testing.md
books/: IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  README.md  books-manifest.yaml
books/knowledge-base/: README.md
books/pending/: DevOps For Dummies (Emily Freeman) (Z-Library).epub  How Linux Works (Brian Ward) (Z-Library).epub
docs/: CHAOS.md  DEPLOYMENT.md  FEATURES.md  GEMINI_API_2026.md  GOVERNANCE.md  LOCAL_SETUP.md  OBSERVABILITY.md  ONCALL_AI.md  OPERATIONS.md  PHASE_3_PASSIVE_TRACKING.md  QUICKSTART.md  README.md  RUNBOOKS.md  SECURITY.md  SETUP_CRON.md  SETUP_SYSTEMD.md
knowledge-base/: KB-01-product-discovery.md  KB-02-user-stories.md  KB-07-architecture-decision-records.md  KB-08-pytest-testing-guide.md  KB-09-python-project-structure.md  KB-11-cicd-fundamentals.md  KB-21-devops-culture.md  README.md
lms/: persistence.py
project-lifecycle/: 01-product-discovery-session.md  02-urd-user-requirements-document.md  03-adr-architecture-decision-records.md  04-sprint-planning-sprint-1.md  05-spec-change-request-001.md  05-sprint-planning-sprint-2.md  06-sprint-2-retrospective.md  07-sprint-planning-sprint-3.md  README.md
setup/backup/: backup.sh  restore.sh
setup/cron/: install.sh
setup/systemd/: skillops-backup.service  skillops-backup.timer  skillops.service  skillops.timer
src/lms/: ai_config.py  cache.py  chaos.py  chaos_templates.py  cli.py  dashboard.py  database.py  database_optimization.py  display.py  doctor.py  exceptions.py  git_hooks.py  logging_config.py  main.py  metrics.py  oncall.py  oncall_ai.py  passive_tracking.py  paths.py  performance_monitor.py  performance_profiling.py  persistence.py  postmortem.py  predictive_analytics.py  secrets.py  tracking_optimization.py  wakatime_client.py
storage/: .gitkeep
tests/integration/: test_github_integration.py  test_telegram_integration.py
tests/lms/: chaos_templates_test.py  chaos_test.py  cli_e2e_test.py  cli_test.py  display_test.py  exceptions_test.py  exercise_progress_test.py  metrics_collector_sqlite_test.py  metrics_manager_test.py  oncall_ai_test.py  oncall_test.py  (+15 more)
(+92 files in other folders)
