[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillops"
version = "1.0.0"
description = "LMS workflow CLI for spaced repetition, reflection, and skill reinforcement"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "M-Boiguille", email = "m.boiguille@example.com"}
]
keywords = ["lms", "cli", "spaced-repetition", "workflow", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyYAML>=6.0.2",
    "typer>=0.21.0",
    "rich>=14.0.0",
    "requests>=2.32.0",
    "inquirer>=3.4.0",
    "blessed>=1.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "black>=25.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
skillops = "lms.main:main"

[project.urls]
Homepage = "https://github.com/M-Boiguille/SkillOps"
Repository = "https://github.com/M-Boiguille/SkillOps"
Issues = "https://github.com/M-Boiguille/SkillOps/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
